# LawGPT_DeepSeek

./: .gitignore  .python-version  Dockerfile  Dockerfile.fix  README.md  alembic.ini  custom_requirements.txt  dobavlenie.py  docker-compose.yml  elasticsearch.Dockerfile  es_init.py  generate_embeddings.py  law_gpt_frontend.html  main.py  pyproject.toml  requirements.txt  scraped_content.db  test_deepseek_prompt.py  test_functions.py  test_gemini_pdf.py  test_procedural_forms.py  test_search.py
alembic/: env.py
app/: api_chat_router.py  auth.py  cache.py  chat.py  config.py  context_manager.py  database.py  errors.py  log_streaming.py  mail_utils.py  models.py  schemas.py  search_result.py  service.py  speech_content_filter.py  speech_recognition_ml.py  utilities.py  utils.py  websocket_state.py
deepresearch_audit/: usage_stats.json
frontend/: additional-styles.css  app.js  file-upload.js  index.html  logs-websocket.js  markdown.js  mobile-enhancements.js  modal.css  offline-support.js   readme.md  styles.css
nginx/: nginx.conf
output_documents/: A40-310029-2018_20181229_Opredelenie_recognized.txt  DS_2_Evergrin_avtom._prol._do_01.04.2015_podpisano_s_nashey_storony_recognized.txt  dogovor_evergrin7_recognized.txt  dogovor_evergrin9_recognized.txt
proxies/: proxies.txt
scripts/: dbcheck.py  es_init.py
uploads/: 20250313_123153_Ilia_Semukhin_Data_Engineer.docx  20250318_184359_200_01_iskovoe_zajavlenie.docx  20250320_143955_Postanovlenie_Arbitrazhnogo_suda_Severo-Zapadnogo_okruga_ot_0_195.docx  20250326_112653_Testovyj_dogovor_postavki.docx  (+29 more)
(+121 files in other folders)
