[project]
name = "lawgpt"
version = "1"
description = "lawgpt"
authors = [
    {name = "Ilia Semukhin",email = "32244932+semukhin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "aiohttp (>=3.11.13,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "fake-useragent (>=2.0.3,<3.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
